[build-system]
requires = ["setuptools",
            "wheel",
            "Cython",
            "numpy==1.23.2; python_version >= '3.10'",
            "oldest-supported-numpy; python_version >= '3.8' and python_version < '3.10'",
            "numpy==1.16.1; python_version <= '3.7' and python_version >= '3'",
            "numpy==1.13.3; python_version=='2.7'",
            "brain-isotopic-distribution >= 1.5.8",
            "ms-peak-picker >= 0.1.41"]


[tool.ruff]
target-version = "py38"
line-length = 120
select = ["D"]
ignore = ["D415", "D400", "D212", "D205", "D203", "D105"]

[tool.ruff.pydocstyle]
convention = "numpy"