[build-system]
requires = ["setuptools",
            "wheel",
            "Cython",
            "numpy==2.0.0,<2.1.0; python_version >= '3.9'",
            "oldest-supported-numpy; python_version >= '3.8' and python_version < '3.9'",
            "numpy==1.16.1; python_version <= '3.7' and python_version >= '3'",
            "numpy==1.13.3; python_version=='2.7'",
            "brain-isotopic-distribution >= 1.5.8",
            "ms-peak-picker>=0.1.46"
        ]


[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["D"]
ignore = ["D415", "D400", "D212", "D205", "D203", "D105"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"